@startuml
'https://plantuml.com/class-diagram

class Game
class BombProp
class MobEnemy
class ELiteEnemy
class SuperEliteEnemy
class EnemyBullet
interface BombPublisher
interface BombSubscriber

Game ..> BombProp
BombPublisher <|.. BombProp

BombSubscriber <|-- MobEnemy
BombSubscriber <|-- ELiteEnemy
BombSubscriber <|-- SuperEliteEnemy
BombSubscriber <|-- EnemyBullet

BombProp o-->  BombSubscriber

class Game {
    + crashCheckAction(): void
}

interface BombPublisher {
    + addSubscriber(BombSubscriber subscriber): void
    + removeSubscriber(BombSubscriber subscriber): void
    + notifySubscribers(): int
}

class BombProp {
    - subscribers: List<BombSubscriber>
    + addSubscriber(BombSubscriber subscriber): void
    + removeSubscriber(BombSubscriber subscriber): void
    + notifySubscribers(): int
}


interface BombSubscriber {
    + update(): int
}

class EnemyBullet {
    + update(): int
}

class MobEnemy {
    + update(): int
}

class ELiteEnemy {
    + update(): int
}

class SuperEliteEnemy {
    + update(): int
}


@enduml